touchups for landing page

--- a/landing.html
+++ b/landing.html
@@ -73,7 +73,9 @@
             data-aos="zoom-in"
             data-aos-delay="100"
           >
-            <h2>Grow & Guide<br />Find your<span> best mentors!</span></h2>
+            <h2>
+              <span> Empowering Growth</span><br />One mentorship at a time
+            </h2>
             <div>
               <a href="login.html" class="btn-get-started scrollto">Login</a>
               <a href="signup_main.html" class="btn-get-started scrollto"
@@ -99,97 +101,48 @@
       <section id="about" class="about">
         <div class="container" data-aos="fade-up">
           <div class="row">
-            <div class="col-lg-7 col-md-6">
-              <div
-                class="about-content"
-                data-aos="fade-left"
-                data-aos-delay="100"
-              >
-                <h2>About Us</h2>
-                <h3>
-                  Odio sed id eos et laboriosam consequatur eos earum soluta.
-                </h3>
-                <p>Lorem ipsum dolor sit amet</p>
-                <p>Aut dolor id. Sint aliquam consequatur</p>
-                <ul>
-                  <li><i class="bi bi-check-circle"></i> Ullamco labor</li>
-                  <li>
-                    <i class="bi bi-check-circle"></i> Duis aute irure dolor in
-                    repreh
-                  </li>
-                  <li>
-                    <i class="bi bi-check-circle"></i> Ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.
-                  </li>
-                </ul>
-              </div>
+            <!-- <div class="col-lg-7 col-md-6"> -->
+            <div
+              class="about-content"
+              data-aos="fade-left"
+              data-aos-delay="100"
+            >
+              <h2>About Us</h2>
+              <h3>
+                Welcome to Mentify, where connections flourish and growth
+                thrives. Mentify is a dynamic platform dedicated to facilitating
+                meaningful mentorship relationships that empower individuals to
+                reach their full potential.
+              </h3>
+              <p>
+                Mentify provides the tools and resources to connect you with
+                mentors and mentees who can help you achieve your goals.
+              </p>
+
+              <ul>
+                <li>
+                  <i class="bi bi-check-circle"></i> Community-Centric Approach:
+                  Mentify is built on the foundation of community support and
+                  collaboration.
+                </li>
+                <li>
+                  <i class="bi bi-check-circle"></i> Personalized Matching: We
+                  understand that every mentorship relationship is unique, so we
+                  try and provide you the exact attention needed.
+                </li>
+                <li>
+                  <i class="bi bi-check-circle"></i> Continuous Support: Our
+                  commitment to your success doesn't end after the initial
+                  match. Mentify provides ongoing support and resources to help
+                  you navigate your mentorship journey and achieve your personal
+                  and professional aspirations.
+                </li>
+              </ul>
             </div>
+            <!-- </div> -->
           </div>
         </div>
       </section>
-      <!-- End About Section -->
-
-      <!-- ======= Services Section ======= -->
-      <!-- <section id="services" class="services section-bg">
-      <div class="container" data-aos="fade-up">
-
-        <header class="section-header">
-          <h3>Mentorship Programs</h3>
-          <p>Laudem latine persequeris id sed, ex fabulas delectus quo. No vel partiendo abhorreant vituperatoribus.</p>
-        </header>
-
-        <div class="row g-5">
-
-          <div class="col-md-6 col-lg-4 wow bounceInUp" data-aos="zoom-in" data-aos-delay="100">
-            <div class="box">
-              <div class="icon" style="background: #fceef3;"><i class="bi bi-briefcase" style="color: #ff689b;"></i></div>
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4" data-aos="zoom-in" data-aos-delay="200">
-            <div class="box">
-              <div class="icon" style="background: #fff0da;"><i class="bi bi-card-checklist" style="color: #e98e06;"></i></div>
-              <h4 class="title"><a href="">Dolor Sitema</a></h4>
-              <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-4" data-aos="zoom-in" data-aos-delay="300">
-            <div class="box">
-              <div class="icon" style="background: #e6fdfc;"><i class="bi bi-bar-chart" style="color: #3fcdc7;"></i></div>
-              <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 wow" data-aos="zoom-in" data-aos-delay="100">
-            <div class="box">
-              <div class="icon" style="background: #eafde7;"><i class="bi bi-binoculars" style="color:#41cf2e;"></i></div>
-              <h4 class="title"><a href="">Magni Dolores</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-4" data-aos="zoom-in" data-aos-delay="200"">
-        <div class=" box">
-            <div class="icon" style="background: #e1eeff;"><i class="bi bi-brightness-high" style="color: #2282ff;"></i></div>
-            <h4 class="title"><a href="">Nemo Enim</a></h4>
-            <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
-          </div>
-        </div>
-
-        <div class="col-md-6 col-lg-4" data-aos="zoom-in" data-aos-delay="300">
-          <div class="box">
-            <div class="icon" style="background: #ecebff;"><i class="bi bi-calendar4-week" style="color: #8660fe;"></i></div>
-            <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
-            <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
-          </div>
-        </div>
-
-      </div>
-
-      </div>
-    </section>End Services Section -->
 
       <!-- ======= Testimonials Section ======= -->
       <section id="testimonials" class="testimonials">
@@ -216,10 +169,8 @@
                       <h3>Saul Goodman</h3>
                       <h4>Ceo &amp; Founder</h4>
                       <p>
-                        Proin iaculis purus consequat sem cure digni ssim donec
-                        porttitora entum suscipit rhoncus. Accusantium quam,
-                        ultricies eget id, aliquam eget nibh et. Maecen aliquam,
-                        risus at semper.
+                        Had an amazing time and learnt a lot from some of the
+                        top mentors.
                       </p>
                     </div>
                   </div>
@@ -235,10 +186,13 @@
                       <h3>Sara Wilsson</h3>
                       <h4>Designer</h4>
                       <p>
-                        Export tempor illum tamen malis malis eram quae irure
-                        esse labore quem cillum quid cillum eram malis quorum
-                        velit fore eram velit sunt aliqua noster fugiat irure
-                        amet legam anim culpa.
+                        Finding a mentor who understood my unique challenges as
+                        a woman in STEM seemed impossible until I discovered
+                        Mentify. Through the platform, I connected with a mentor
+                        who not only shared my professional interests but also
+                        empowered me to break through barriers and pursue my
+                        passions fearlessly. Mentify has been a beacon of
+                        support and inspiration on my journey to success.
                       </p>
                     </div>
                   </div>
@@ -254,10 +208,13 @@
                       <h3>Jena Karlis</h3>
                       <h4>Store Owner</h4>
                       <p>
-                        Enim nisi quem export duis labore cillum quae magna enim
-                        sint quorum nulla quem veniam duis minim tempor labore
-                        quem eram duis noster aute amet eram fore quis sint
-                        minim.
+                        I can't thank Mentify enough for connecting me with my
+                        mentor. As a first-time entrepreneur, I faced numerous
+                        obstacles and uncertainties. However, with the guidance
+                        and wisdom of my mentor, I've gained the confidence and
+                        skills needed to navigate the startup landscape. Mentify
+                        provided the support system I needed to turn my dreams
+                        into reality!
                       </p>
                     </div>
                   </div>
@@ -273,10 +230,14 @@
                       <h3>Matt Brandon</h3>
                       <h4>Freelancer</h4>
                       <p>
-                        Fugiat enim eram quae cillum dolore dolor amet nulla
-                        culpa multos export minim fugiat minim velit minim dolor
-                        enim duis veniam ipsum anim magna sunt elit fore quem
-                        dolore labore illum veniam.
+                        Mentify has been a game-changer for me! As a recent
+                        graduate navigating the complexities of starting my
+                        career, I was unsure where to turn for guidance. Through
+                        Mentify, I found an amazing mentor who provided
+                        invaluable advice, support, and encouragement every step
+                        of the way. I'm grateful for the opportunity to connect
+                        with someone who truly cares about my growth and
+                        development.
                       </p>
                     </div>
                   </div>
@@ -305,17 +266,12 @@
               data-aos-delay="100"
             >
               <div class="member">
-                <img src="assets/img/team-1.jpg" class="img-fluid" alt="" />
+                <img src="assets/img/yukta.jpg" class="img-fluid" alt="" />
                 <div class="member-info">
                   <div class="member-info-content">
-                    <h4>member</h4>
-                    <span>role</span>
-                    <div class="social">
-                      <a href=""><i class="bi bi-twitter"></i></a>
-                      <a href=""><i class="bi bi-facebook"></i></a>
-                      <a href=""><i class="bi bi-instagram"></i></a>
-                      <a href=""><i class="bi bi-linkedin"></i></a>
-                    </div>
+                    <h4>Yukta Rajapur</h4>
+                    <span>Frontend Dev</span>
+                    <div class="social"></div>
                   </div>
                 </div>
               </div>
@@ -327,17 +283,12 @@
               data-aos-delay="200"
             >
               <div class="member">
-                <img src="assets/img/team-2.jpg" class="img-fluid" alt="" />
+                <img src="assets/img/tarushi.jpeg" class="img-fluid" alt="" />
                 <div class="member-info">
                   <div class="member-info-content">
-                    <h4>member</h4>
-                    <span>role</span>
-                    <div class="social">
-                      <a href=""><i class="bi bi-twitter"></i></a>
-                      <a href=""><i class="bi bi-facebook"></i></a>
-                      <a href=""><i class="bi bi-instagram"></i></a>
-                      <a href=""><i class="bi bi-linkedin"></i></a>
-                    </div>
+                    <h4>Tarushi Taneja</h4>
+                    <span>Backend Dev</span>
+                    <div class="social"></div>
                   </div>
                 </div>
               </div>
@@ -349,17 +300,12 @@
               data-aos-delay="300"
             >
               <div class="member">
-                <img src="assets/img/team-3.jpg" class="img-fluid" alt="" />
+                <img src="assets/img/vaishnovi.jpg" class="img-fluid" alt="" />
                 <div class="member-info">
                   <div class="member-info-content">
-                    <h4>member</h4>
-                    <span>role</span>
-                    <div class="social">
-                      <a href=""><i class="bi bi-twitter"></i></a>
-                      <a href=""><i class="bi bi-facebook"></i></a>
-                      <a href=""><i class="bi bi-instagram"></i></a>
-                      <a href=""><i class="bi bi-linkedin"></i></a>
-                    </div>
+                    <h4>Vaishnovi Arun</h4>
+                    <span>Backend Dev</span>
+                    <div class="social"></div>
                   </div>
                 </div>
               </div>
@@ -371,17 +317,28 @@
               data-aos-delay="400"
             >
               <div class="member">
-                <img src="assets/img/team-4.jpg" class="img-fluid" alt="" />
+                <img src="assets/img/riddhi.jpg" class="img-fluid" alt="" />
                 <div class="member-info">
                   <div class="member-info-content">
-                    <h4>member</h4>
-                    <span>role</span>
-                    <div class="social">
-                      <a href=""><i class="bi bi-twitter"></i></a>
-                      <a href=""><i class="bi bi-facebook"></i></a>
-                      <a href=""><i class="bi bi-instagram"></i></a>
-                      <a href=""><i class="bi bi-linkedin"></i></a>
-                    </div>
+                    <h4>Riddhi</h4>
+                    <span>Backend Dev</span>
+                    <div class="social"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div
+              class="col-lg-3 col-md-6"
+              data-aos="fade-up"
+              data-aos-delay="400"
+            >
+              <div class="member">
+                <img src="assets/img/rishita.jpg" class="img-fluid" alt="" />
+                <div class="member-info">
+                  <div class="member-info-content">
+                    <h4>Rishita Rathi</h4>
+                    <span>Backend Dev</span>
+                    <div class="social"></div>
                   </div>
                 </div>
               </div>
