--- a/create_program_mentor.html
+++ b/create_program_mentor.html
@@ -117,7 +117,7 @@
                 <div class="d-flex justify-content-center align-items-center mb-3 text">
                     <h2 style="text-align: center;">Proposal Form</h2>
                 </div>
-                <form>
+                <form id = "myForm">
                 <div class="row mt-2">
                     <div class="col-md-12"><label class="labels"><b>Course Name</b></label><input type="text" class="form-control" placeholder="Full Name" value=""></div>
                 </div>
@@ -153,7 +153,7 @@
                 </div>
                 
 
-                <div class="mt-5 text-center"><button class="btn profile-button" type="button" style="color: #ffffff;">Submit</button></div>
+                <div class="mt-5 text-center"><button class="btn profile-button" type="submit" style="color: #ffffff;">Submit</button></div>
                 </form>
             </div>
         </div>
